--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Scout V0.0.0</title>
     </head>
     <body>
         <div id="app">
-            <h1> Placeholder title </h1>
-            <p> Placeholder body </p>
+            {{message}}
         </div>
+        
+        <script src="statics/app.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     </body>
     <footer></footer>
 </html>
